--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Garimpo Shape | Links</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary-orange: #FF8C00;
+            --bg-black: #050505;
+            --text-white: #ffffff;
+        }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            background-color: var(--bg-black);
+            color: var(--text-white);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            padding: 50px 20px;
+        }
+
+        /* LOGO ESTILIZADA SEM CÍRCULO */
+        .brand-container {
+            text-align: center;
+            margin-bottom: 40px;
+            position: relative;
+        }
+
+        .logo-gs {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 80px;
+            font-weight: 900;
+            color: var(--primary-orange);
+            font-style: italic; /* Inclinação esportiva */
+            line-height: 1;
+            letter-spacing: -5px;
+            display: inline-block;
+            position: relative;
+            text-shadow: 4px 4px 0px rgba(0,0,0,1), 0 0 15px rgba(255, 140, 0, 0.3);
+        }
+
+        /* Detalhe estético no GS */
+        .logo-gs::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 5%;
+            width: 90%;
+            height: 4px;
+            background: var(--text-white);
+            transform: skewX(-20deg);
+        }
+
+        .brand-name {
+            display: block;
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-top: 10px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+
+        .subtitle {
+            font-size: 0.9rem;
+            opacity: 0.6;
+            margin-top: 5px;
+        }
+
+        /* LINKS */
+        .links-wrapper {
+            width: 100%;
+            max-width: 400px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .btn-link {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: var(--text-white);
+            padding: 20px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-weight: 600;
+            text-align: center;
+            transition: 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-link:hover {
+            background: var(--primary-orange);
+            color: #000;
+            border-color: var(--primary-orange);
+            transform: scale(1.02);
+        }
+
+        .featured {
+            background: linear-gradient(90deg, #FF8C00, #FF4500);
+            color: #000;
+            border: none;
+            box-shadow: 0 5px 15px rgba(255, 140, 0, 0.4);
+        }
+
+        footer {
+            margin-top: auto;
+            padding: 40px 0;
+            font-size: 0.7rem;
+            opacity: 0.4;
+            text-transform: uppercase;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="brand-container">
+        <span class="logo-gs">GS</span>
+        <h1 class="brand-name">Garimpo Shape</h1>
+        <p class="subtitle">Fitness & Esportes</p>
+    </div>
+
+    <div class="links-wrapper">
+        <a href="SEU_LINK_AQUI" class="btn-link featured">🔥 PROMOÇÕES DA SEMANA</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">🏋️ Academia e Musculação</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">👟 Esportes e Calçados</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">💊 Suplementos Originais</a>
+        <a href="https://instagram.com/garimposhape" class="btn-link">📱 Me siga no Insta</a>
+    </div>
+
+    <footer>
+        © 2026 Garimpo Shape - Curadoria Independente
+    </footer>
+
+</body>
+</html>
