--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
     </div>
 
     <div class="links-wrapper">
-        <a href="SEU_LINK_AQUI" class="btn-link featured">🔥 PROMOÇÕES DA SEMANA</a>
-        <a href="SEU_LINK_AQUI" class="btn-link">🏋️ Academia e Musculação</a>
-        <a href="SEU_LINK_AQUI" class="btn-link">👟 Esportes e Calçados</a>
-        <a href="SEU_LINK_AQUI" class="btn-link">💊 Suplementos Originais</a>
-        <a href="https://instagram.com/garimposhape" class="btn-link">📱 Me siga no Insta</a>
+        <a href="SEU_LINK_AQUI" class="btn-link featured">🔥 IMPERDÍVEIS</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">🏋️ SUA ACADEMIA EM CASA</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">👟 VISTA-SE PARA PROGREDIR</a>
+        <a href="SEU_LINK_AQUI" class="btn-link">⚡ COMBUSTÍVEL PARA O SHAPE</a>
+        <a href="#" class="btn-link">🛰️ RADAR DO GARIMPO (GRUPO VIP)</a>
     </div>
 
     <footer>
