--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <footer>
-        © 2026 Garimpo Shape - Curadoria Independente
+        © 2026 Garimpo Shape - Afiliado Mercado Livre
     </footer>
 
 </body>
