--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <a href="SEU_LINK_AQUI" class="btn-link">🏋️ SUA ACADEMIA EM CASA</a>
         <a href="SEU_LINK_AQUI" class="btn-link">👟 VISTA-SE PARA PROGREDIR</a>
         <a href="SEU_LINK_AQUI" class="btn-link">⚡ COMBUSTÍVEL PARA O SHAPE</a>
-        <a href="#" class="btn-link">⭐️ GRUPO VIP</a>
+        <a href="https://chat.whatsapp.com/G2l89ti0RJQLsSu1Jqn3mH?mode=gi_t" class="btn-link">⭐️ GRUPO VIP</a>
     </div>
 
     <footer>
