--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     </div>
 
     <div class="links-wrapper">
-        <a href="SEU_LINK_AQUI" class="btn-link featured">🔥 IMPERDÍVEIS</a>
+        <a href="https://mercadolivre.com/sec/29jykFc" class="btn-link featured">🔥 IMPERDÍVEIS</a>
         <a href="https://mercadolivre.com/sec/142h6JN" class="btn-link">🏋️ SUA ACADEMIA EM CASA</a>
-        <a href="SEU_LINK_AQUI" class="btn-link">👟 VESTUÁRIO MASCULINO</a>
-        <a href="SEU_LINK_AQUI" class="btn-link">👝 VESTUÁRIO FEMININO</a>
+        <a href="https://mercadolivre.com/sec/2Cj9oof" class="btn-link">👟 VESTUÁRIO MASCULINO</a>
+        <a href="https://mercadolivre.com/sec/2GpoKyd" class="btn-link">👝 VESTUÁRIO FEMININO</a>
         <a href="https://mercadolivre.com/sec/1ZQcPmQ" class="btn-link">⚡ COMBUSTÍVEL PARA O SHAPE</a>
         <a href="https://chat.whatsapp.com/G2l89ti0RJQLsSu1Jqn3mH?mode=gi_t" class="btn-link">⭐️ GRUPO VIP</a>
     </div>
