--- a/index.html
+++ b/index.html
@@ -32,9 +32,167 @@
         /* LOGO ESTILIZADA SEM CÍRCULO */
         .brand-container {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             position: relative;
         }
+
+        .logo-gs {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 80px;
+            font-weight: 900;
+            color: var(--primary-orange);
+            font-style: italic;
+            line-height: 1;
+            letter-spacing: -5px;
+            display: inline-block;
+            position: relative;
+            text-shadow: 4px 4px 0px rgba(0,0,0,1), 0 0 15px rgba(255, 140, 0, 0.3);
+        }
+
+        .logo-gs::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 5%;
+            width: 90%;
+            height: 4px;
+            background: var(--text-white);
+            transform: skewX(-20deg);
+        }
+
+        .brand-name {
+            display: block;
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-top: 10px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+
+        .subtitle {
+            font-size: 0.9rem;
+            opacity: 0.6;
+            margin-top: 5px;
+        }
+
+        /* BARRA DE PESQUISA */
+        .search-wrapper {
+            width: 100%;
+            max-width: 400px;
+            margin-bottom: 25px;
+        }
+
+        #searchInput {
+            width: 100%;
+            padding: 15px 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            color: #fff;
+            font-size: 1rem;
+            outline: none;
+            transition: 0.3s;
+            text-align: center;
+        }
+
+        #searchInput:focus {
+            border-color: var(--primary-orange);
+            background: rgba(255, 255, 255, 0.08);
+            box-shadow: 0 0 15px rgba(255, 140, 0, 0.2);
+        }
+
+        /* LINKS */
+        .links-wrapper {
+            width: 100%;
+            max-width: 400px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .btn-link {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: var(--text-white);
+            padding: 20px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-weight: 600;
+            text-align: center;
+            transition: 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-link:hover {
+            background: var(--primary-orange);
+            color: #000;
+            border-color: var(--primary-orange);
+            transform: scale(1.02);
+        }
+
+        .featured {
+            background: linear-gradient(90deg, #FF8C00, #FF4500);
+            color: #000;
+            border: none;
+            box-shadow: 0 5px 15px rgba(255, 140, 0, 0.4);
+        }
+
+        footer {
+            margin-top: auto;
+            padding: 40px 0;
+            font-size: 0.7rem;
+            opacity: 0.4;
+            text-transform: uppercase;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="brand-container">
+        <span class="logo-gs">GS</span>
+        <h1 class="brand-name">Garimpo Shape</h1>
+        <p class="subtitle">Fitness & Esportes</p>
+    </div>
+
+    <div class="search-wrapper">
+        <input type="text" id="searchInput" placeholder="Buscar categoria ou produto..." onkeyup="filterLinks()">
+    </div>
+
+    <div class="links-wrapper" id="linksContainer">
+        <a href="https://mercadolivre.com/sec/29jykFc" class="btn-link featured">🔥 IMPERDÍVEIS</a>
+        <a href="https://mercadolivre.com/sec/142h6JN" class="btn-link">🏋️ SUA ACADEMIA EM CASA</a>
+        <a href="https://mercadolivre.com/sec/2Cj9oof" class="btn-link">👟 VESTUÁRIO MASCULINO</a>
+        <a href="https://mercadolivre.com/sec/2GpoKyd" class="btn-link">👝 VESTUÁRIO FEMININO</a>
+        <a href="https://mercadolivre.com/sec/1ZQcPmQ" class="btn-link">⚡ COMBUSTÍVEL PARA O SHAPE</a>
+        <a href="https://chat.whatsapp.com/G2l89ti0RJQLsSu1Jqn3mH?mode=gi_t" class="btn-link">⭐️ GRUPO VIP</a>
+    </div>
+
+    <footer>
+        © 2026 Garimpo Shape - Afiliado Mercado Livre
+    </footer>
+
+    <script>
+        function filterLinks() {
+            const input = document.getElementById('searchInput').value.toLowerCase();
+            const links = document.querySelectorAll('.btn-link');
+            
+            links.forEach(link => {
+                const text = link.textContent.toLowerCase();
+                if (text.includes(input)) {
+                    link.style.display = "flex";
+                } else {
+                    link.style.display = "none";
+                }
+            });
+        }
+    </script>
+
+</body>
+</html>
+
 
         .logo-gs {
             font-family: 'Orbitron', sans-serif;
