--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
     <div class="container">
         <div class="card card-hot">
-            <a href="https://mercadolivre.com/sec/2DNpJku" style="text-decoration:none; width:100%">
+            <a href="https://mercadolivre.com/sec/2owULZ7" style="text-decoration:none; width:100%">
                 <div class="card-header">
-                    <span>🔥 OFERTAS IMPERDÍVEIS</span>
+                    <span>🔥 KIT ESPARTANOS 🗡</span>
                     <span class="timer" id="countdown">7:00</span>
                 </div>
             </a>
