--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="card card-hot">
             <a href="https://mercadolivre.com/sec/2owULZ7" style="text-decoration:none; width:100%">
                 <div class="card-header">
-                    <span>🔥 KIT ESPARTANOS 🗡</span>
+                    <span>🔥 KIT COMPLETO DE SUPLEMENTOS 🗡</span>
                     <span class="timer" id="countdown">7:00</span>
                 </div>
             </a>
